Update the .env.example for Artefacts use

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
 #KMS_ENCRYPTED_HOOK_URL= you can use ENCRYPTED_HOOK_URL if you want
-UNENCRYPTED_HOOK_URL=
-AWS_FUNCTION_NAME=
-AWS_REGION=eu-west-1
-AWS_ROLE="arn:aws:iam::123456789123:role/lambda_exec_role"
+UNENCRYPTED_HOOK_URL=<available in the Slack Error Reporter (private) App
+AWS_FUNCTION_NAME=error-reporter-production
+AWS_REGION=ap-northeast-1
+AWS_ROLE="arn:aws:iam::280607528988:role/monitoring-error-reporter-production"
 
 # You can get AWS_ACCESS_KEY_ID and AWS_SECRET_ACCESS_KEY here: https://console.aws.amazon.com/iam/home#/users
 # Click on user -> Security credentials -> Access keys -> Create access key
